Updates to fix Google API and remove unused data files